--- a/2017302580073_冯文豪.md
+++ b/2017302580073_冯文豪.md
@@ -1,4 +1,5 @@
-# ping
-![first](first.png)
-# tracert
-![second](second.png)
+
+# ping 192.168.3.1
+![second](https://github.com/fengwenhaojx/ComputerInternet/raw/master/second.png)
+# tracert 百度的服务器
+![first](https://raw.githubusercontent.com/fengwenhaojx/ComputerInternet/master/first.png)
